# reseek

./: .gitignore  BUILD.md
.github/workflows/: build.yml  release.yml
src/: CMakeLists.txt  Makefile.generated  Makefile.tests  calibrate7.cpp  calibrate_masm.cpp  cmd_prefiltermu.cpp  convert.cpp  dbsearcher.h  getticks.h  gzguts.h  make_native.bash  mufilter.cpp  muprefilter.cpp  myutils.cpp  myutils.h  parasail.cpp  parasail.h  parasail_mu.cpp  postmufilter.cpp  prefiltermu.cpp  profileloader.cpp  raw_neon_test  raw_neon_test.cpp  runquery.cpp  runself.cpp  runthreads.cpp  seqfeeder.cpp  simple_neon_test.cpp  test_neon.cpp  test_para.cpp  zutil.h
test_demo/: alignment.txt  all_hits.txt  comprehensive_alignments.txt  comprehensive_hits.txt  detailed_alignment.txt  gap_alignment.txt  mu_features.fasta  protein_database.bca  protein_db.files  structures.files  summary.txt  test1.cal  test1.fasta  test2.cal  test2.fasta  test_db.bca
